--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
 main{
     height: 80vh;
     background-color: orangered;
-    padding: 30px;
+    padding: 40px;
+    width: 100%;
 }
 #logo{
     width: 50px;
@@ -20,31 +21,42 @@ main{
 nav{
     display: flex;
     justify-content: space-between;
-    width: 100vw; 
-    margin-bottom: 5em ;  
+    width: 90vw; 
+    margin-bottom: 5em;  
 }
 .nav{
    width: 60vw;
-   margin-right: 5em;
+    margin-right: 1em; 
    display: flex;
    justify-content: space-around;
+   font-family: 'Courier New', Courier, monospace;
+   transition: transform 0.2s;
+}
+a:hover{
+   font-weight: bold;
+    
 }
 a{
     text-decoration: none;
     color: wheat;
 }
-#home{
-    color: white;
-}
+
+
+ #pan{
+   width: 40rem; 
+    float: right;
+    margin-left: 5em; 
+
+} 
 h1{
-    color: wheat;
+    color: white;
     font-size: 100px;
     width: 60px;
 }
 p{
     color: rgb(248, 230, 196);
-    margin-bottom: 20px;
-    width: 25vw;
+    margin-bottom: 40px;
+    width: 27vw;
 }
 input {
     padding: 10px;
@@ -58,3 +70,29 @@ button{
    border-radius: 20px;
    width: 7em;
 }
+  
+.footer{
+  width: 100%;
+  height: 10vh;
+  display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: space-evenly;
+ margin-top: 2em;
+}
+.footer .images:hover{
+    transform: scale(1.7);
+    background-color: orange;
+    color: white;
+}
+.images{
+ display: flex;
+ flex-direction: column; 
+ justify-content: center;
+ align-items: center;
+}
+.images img{
+    height: 6em;
+}
+
+ 
